--- a/Project1-Regular.ufo/glyphs/contents.plist
+++ b/Project1-Regular.ufo/glyphs/contents.plist
@@ -8,6 +8,8 @@
 	<string>nonmarkingreturn.glif</string>
 	<key>null</key>
 	<string>null.glif</string>
+	<key>o</key>
+	<string>o.glif</string>
 	<key>space</key>
 	<string>space.glif</string>
 </dict>
