--- a/Project1-Regular.ufo/lib.plist
+++ b/Project1-Regular.ufo/lib.plist
@@ -8,6 +8,7 @@
 		<string>null</string>
 		<string>nonmarkingreturn</string>
 		<string>space</string>
+		<string>o</string>
 	</array>
 </dict>
 </plist>
