--- a/Project1-Regular.ufo/lib.plist
+++ b/Project1-Regular.ufo/lib.plist
@@ -9,6 +9,7 @@
 		<string>nonmarkingreturn</string>
 		<string>space</string>
 		<string>o</string>
+		<string>n</string>
 	</array>
 </dict>
 </plist>
