--- a/Project1-Regular.ufo/glyphs/contents.plist
+++ b/Project1-Regular.ufo/glyphs/contents.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>.notdef</key>
 	<string>_notdef.glif</string>
+	<key>a</key>
+	<string>a.glif</string>
 	<key>n</key>
 	<string>n.glif</string>
 	<key>nonmarkingreturn</key>
